fix scrolling issue on manage-page, fix modal overlap on small mobile devices

--- a/react-app/src/components/Footer/footer.css
+++ b/react-app/src/components/Footer/footer.css
@@ -47,7 +47,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    height: 75px;
+    /* height: 75px; */
 }
 
 @media (min-width:768px) {
