--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -98,7 +98,8 @@ form {
     border-radius: 10px;
     height: auto;
     padding: 20px;
-    width: 300px;
+    min-width: 260px;
+    max-width: 320px;
 }
 
 .menu {
